--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form action="">
-        <label for="input">Introduce tus manos</label>
-        <input id="input" name="input" type="text">
-        <input type="button" value="Enviar" id="send">
+        <label for="input">¿Qué te ha dicho el espejo? (test 1)</label>
+        <span>👇🤜👇👇👇👇👇👇👇👉👆👈🤛👉👇👊👇🤜👇👉👆👆👆👆👆👈🤛👉👆👆👊👆👆👆👆👆👆👆👊👊👆👆👆👊</span>
+        <input type="button" value="Traducir" id="send1">
     </form>
-    <span id="text"></span>
+    <div>
+        <span>Traducción:</span>
+        <span id="text1"></span>
+    </div>
+    <form action="">
+        <label for="input">¿Qué te ha dicho el espejo? (test 2)</label>
+        <span>👉👆👆👆👆👆👆👆👆🤜👇👈👆👆👆👆👆👆👆👆👆👉🤛👈👊👉👉👆👉👇🤜👆🤛👆👆👉👆👆👉👆👆👆🤜👉🤜👇👉👆👆👆👈👈👆👆👆👉🤛👈👈🤛👉👇👇👇👇👇👊👉👇👉👆👆👆👊👊👆👆👆👊👉👇👊👈👈👆🤜👉🤜👆👉👆🤛👉👉🤛👈👇👇👇👇👇👇👇👇👇👇👇👇👇👇👊👉👉👊👆👆👆👊👇👇👇👇👇👇👊👇👇👇👇👇👇👇👇👊👉👆👊👉👆👊</span>
+        <input type="button" value="Traducir" id="send2">
+    </form>
+    <div>
+        <span>Traducción:</span>
+        <span id="text2"></span>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
